[gd_scene format=3 uid="uid://xq1wbsdi35hy"]

[ext_resource type="Script" uid="uid://l66toq0dm38c" path="res://scripts/generar_reportes.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 30.0
content_margin_top = 20.0
content_margin_right = 30.0
content_margin_bottom = 20.0
bg_color = Color(0.12549, 0.290196, 0.533333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.219608, 0.458824, 0.792157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.188235, 0.439216, 0.803922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.34902, 0.67451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.227451, 0.52549, 0.94902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.156863, 0.415686, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GenerarReportes" type="Control" unique_id=1809680600]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Fondo" type="ColorRect" parent="." unique_id=1828202672]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.95, 0.96, 0.98, 1)

[node name="ContenedorPrincipal" type="VBoxContainer" parent="." unique_id=503335141]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TituloPanel" type="Panel" parent="ContenedorPrincipal" unique_id=1895096684]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Titulo" type="Label" parent="ContenedorPrincipal/TituloPanel" unique_id=1822333748]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "GENERAR REPORTES"
horizontal_alignment = 1

[node name="CategoriasContainer" type="VBoxContainer" parent="ContenedorPrincipal" unique_id=817986815]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="LabelCategorias" type="Label" parent="ContenedorPrincipal/CategoriasContainer" unique_id=1191378571]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Seleccione categor√≠a de reporte:"

[node name="BtnNoConformidades" type="Button" parent="ContenedorPrincipal/CategoriasContainer" unique_id=320699503]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "üìà Estad√≠sticas de No Conformidades"

[node name="BtnSatisfaccion" type="Button" parent="ContenedorPrincipal/CategoriasContainer" unique_id=1942552211]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "üòä Satisfacci√≥n del Cliente"

[node name="BtnObjetivosCalidad" type="Button" parent="ContenedorPrincipal/CategoriasContainer" unique_id=103532931]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "üéØ Objetivos de Calidad"

[node name="BtnEstadoNC" type="Button" parent="ContenedorPrincipal/CategoriasContainer" unique_id=975846664]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "‚ö†Ô∏è Estado de No Conformidades"

[node name="FiltrosContainer" type="VBoxContainer" parent="ContenedorPrincipal" unique_id=1303840960]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="LabelFiltros" type="Label" parent="ContenedorPrincipal/FiltrosContainer" unique_id=305140409]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "Filtros de reporte:"

[node name="GridFiltros" type="GridContainer" parent="ContenedorPrincipal/FiltrosContainer" unique_id=218355752]
layout_mode = 2
columns = 2

[node name="LabelFechaInicio" type="Label" parent="ContenedorPrincipal/FiltrosContainer/GridFiltros" unique_id=214675570]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Fecha inicio:"

[node name="InputFechaInicio" type="LineEdit" parent="ContenedorPrincipal/FiltrosContainer/GridFiltros" unique_id=2048908374]
layout_mode = 2
placeholder_text = "DD/MM/AAAA"

[node name="LabelFechaFin" type="Label" parent="ContenedorPrincipal/FiltrosContainer/GridFiltros" unique_id=1373422843]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Fecha fin:"

[node name="InputFechaFin" type="LineEdit" parent="ContenedorPrincipal/FiltrosContainer/GridFiltros" unique_id=1008916645]
layout_mode = 2
placeholder_text = "DD/MM/AAAA"

[node name="LabelSucursal" type="Label" parent="ContenedorPrincipal/FiltrosContainer/GridFiltros" unique_id=193500616]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Sucursal:"

[node name="SelectSucursal" type="OptionButton" parent="ContenedorPrincipal/FiltrosContainer/GridFiltros" unique_id=1885596517]
layout_mode = 2

[node name="BtnGenerar" type="Button" parent="ContenedorPrincipal" unique_id=1414554495]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "GENERAR VISTA PREVIA"

[node name="BtnExportar" type="Button" parent="ContenedorPrincipal" unique_id=930859288]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 0.2, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
text = "üì• EXPORTAR REPORTE"

[node name="BtnVolverMenu" type="Button" parent="ContenedorPrincipal" unique_id=40002101]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "üè† VOLVER AL MEN√ö PRINCIPAL"
